fix:change img height on mobile version

--- a/cssMemeSlider/style.css
+++ b/cssMemeSlider/style.css
@@ -164,5 +164,8 @@
     margin: auto;
     padding-bottom: 2rem;
   }
+  .slider__image {
+    height: 39rem;
+  }
 }
 
